# Hometasks

Hometask 01/task1/sources/: main.cpp
Hometask 01/task2/: CMakeLists.txt
Hometask 01/task2/sources/: main.cpp
Hometask02/: CMakeLists.txt  README.md
Hometask02/sources/: main.cpp  vector_utils.h
Hometask02/tests/: test.cpp
Hometask03/: CMakeLists.txt
Hometask03/sources/: app_settings.cpp  app_settings.h  connection_test.cpp  connection_test.h  data_pool.h  main.cpp  menu.cpp  menu_item.h  resource_test.cpp  resource_test.h
Hometask04/sources/: main.cpp  menu_item.h  network_address.h  test_base.h  vector_utils.h
Hometask05/: CMakeLists.txt
Hometask05/sources/: data_pool.h  loger.h  main.cpp  menu_item.h  network_address.cpp
